--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Qoute - Your Free Online University</title>
-	<link rel="stylesheet" href="css.css">
+	<link rel="stylesheet" href="style.css">
 	<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
@@ -90,8 +90,8 @@
 				<h2>Get In Touch</h2>
 				<p>Have questions or want to contribute to our open-source platform? We'd love to hear from you.</p>
 				<div class="contact-info">
-					<p>Discord: @celebraciones</p>
-					<p>My Store:<a href="https://beacons.ai/delexo" target="_blank"> @Delexo</a></p>
+					<p>Discord: @delexostudios</p>
+					<p>My Store: <a href="https://beacons.ai/delexo" target="_blank">@Delexo</a></p>
 				</div>
 			</div>
 		</section>
