--- a/student.html
+++ b/student.html
@@ -59,6 +59,28 @@
 			</div>
 			
 			<div class="tools-grid">
+				<div class="tool-section featured">
+					<h2>⭐ Featured Tools</h2>
+					<p class="section-description">Hand-picked premium tools that students love most</p>
+					<div class="tool-cards">
+						<a href="https://app.cluely.com/" target="_blank" class="tool-item featured-item">
+							<h3>Cluely <img src="https://app.cluely.com/favicon.ico" alt="Cluely" class="tool-logo"></h3>
+							<p>AI study assistant for academic support</p>
+							<span class="tool-tag study">Study</span>
+						</a>
+						<a href="https://www.bettercanvas.org/" target="_blank" class="tool-item featured-item">
+							<h3>BetterCampus <img src="https://www.bettercanvas.org/favicon.ico" alt="BetterCampus" class="tool-logo"></h3>
+							<p>Chrome extension to enhance Canvas LMS experience</p>
+							<span class="tool-tag canvas">Canvas</span>
+						</a>
+						<a href="https://elevenlabs.io/" target="_blank" class="tool-item featured-item">
+							<h3>ElevenLabs <img src="https://elevenlabs.io/favicon.ico" alt="ElevenLabs" class="tool-logo"></h3>
+							<p>Immersive reader with text-to-speech (mobile free)</p>
+							<span class="tool-tag audio">Audio</span>
+						</a>
+					</div>
+				</div>
+
 				<div class="tool-section">
 					<h2>AI Study Assistants</h2>
 					<p class="section-description">Intelligent AI tools to help with homework, research, and academic writing</p>
