--- a/student.html
+++ b/student.html
@@ -235,48 +235,41 @@
 					<h2>Free Courses & Educational Resources</h2>
 					<p class="section-description">High-quality free courses, lectures, and learning materials from top institutions</p>
 					<div class="tool-cards">
-						<div class="tool-item">
+						<a href="https://edx.org" target="_blank" class="tool-item">
 							<h3>edX <img src="https://edx.org/favicon.ico" alt="edX" class="tool-logo"></h3>
 							<p>Free university courses from top institutions worldwide</p>
-							<a href="https://edx.org" target="_blank" class="tool-link">Visit</a>
 							<span class="tool-tag courses">Courses</span>
-						</div>
-						<div class="tool-item">
+						</a>
+						<a href="https://khanacademy.org" target="_blank" class="tool-item">
 							<h3>Khan Academy <img src="https://khanacademy.org/favicon.ico" alt="Khan Academy" class="tool-logo"></h3>
 							<p>Free courses in math, science, and more</p>
-							<a href="https://khanacademy.org" target="_blank" class="tool-link">Visit</a>
 							<span class="tool-tag courses">Courses</span>
-						</div>
-						<div class="tool-item">
+						</a>
+						<a href="https://coursera.org" target="_blank" class="tool-item">
 							<h3>Coursera <img src="https://coursera.org/favicon.ico" alt="Coursera" class="tool-logo"></h3>
 							<p>University courses and certifications</p>
-							<a href="https://coursera.org" target="_blank" class="tool-link">Visit</a>
 							<span class="tool-tag certificates">Certificates</span>
-						</div>
-						<div class="tool-item">
+						</a>
+						<a href="https://ocw.mit.edu" target="_blank" class="tool-item">
 							<h3>MIT OCW <img src="https://ocw.mit.edu/favicon.ico" alt="MIT OpenCourseWare" class="tool-logo"></h3>
 							<p>Free MIT course materials</p>
-							<a href="https://ocw.mit.edu" target="_blank" class="tool-link">Visit</a>
 							<span class="tool-tag mit">MIT</span>
-						</div>
-						<div class="tool-item">
+						</a>
+						<a href="https://udemy.com" target="_blank" class="tool-item">
 							<h3>Udemy <img src="https://github.com/Delexoo/Quote/raw/refs/heads/main/udemy.ico" alt="Udemy" class="tool-logo"></h3>
 							<p>Online courses on various topics and skills</p>
-							<a href="https://udemy.com" target="_blank" class="tool-link">Visit</a>
 							<span class="tool-tag skills">Skills</span>
-						</div>
-						<div class="tool-item">
+						</a>
+						<a href="https://freecodecamp.org" target="_blank" class="tool-item">
 							<h3>FreeCodeCamp <img src="https://github.com/Delexoo/Quote/raw/refs/heads/main/freecodecamp.ico" alt="FreeCodeCamp" class="tool-logo"></h3>
 							<p>Free programming and coding tutorials</p>
-							<a href="https://freecodecamp.org" target="_blank" class="tool-link">Visit</a>
 							<span class="tool-tag coding">Coding</span>
-						</div>
-						<div class="tool-item">
+						</a>
+						<a href="https://futurelearn.com" target="_blank" class="tool-item">
 							<h3>FutureLearn <img src="https://futurelearn.com/favicon.ico" alt="FutureLearn" class="tool-logo"></h3>
 							<p>Online courses from universities and institutions</p>
-							<a href="https://futurelearn.com" target="_blank" class="tool-link">Visit</a>
 							<span class="tool-tag courses">Courses</span>
-						</div>
+						</a>
 					</div>
 				</div>
 
@@ -284,30 +277,26 @@
 					<h2>Note Taking & Organization</h2>
 					<p class="section-description">Digital tools for organizing notes, planning studies, and knowledge management</p>
 					<div class="tool-cards">
-						<div class="tool-item">
+						<a href="https://notion.so" target="_blank" class="tool-item">
 							<h3>Notion <img src="https://notion.so/favicon.ico" alt="Notion" class="tool-logo"></h3>
 							<p>All-in-one workspace for notes and planning</p>
-							<a href="https://notion.so" target="_blank" class="tool-link">Visit</a>
 							<span class="tool-tag workspace">Workspace</span>
-						</div>
-						<div class="tool-item">
+						</a>
+						<a href="https://standardnotes.com" target="_blank" class="tool-item">
 							<h3>Standard Notes <img src="https://standardnotes.com/favicon.ico" alt="Standard Notes" class="tool-logo"></h3>
 							<p>Safe note-taking with end-to-end encryption</p>
-							<a href="https://standardnotes.com" target="_blank" class="tool-link">Visit</a>
 							<span class="tool-tag secure">Secure</span>
-						</div>
-						<div class="tool-item">
+						</a>
+						<a href="https://todo.microsoft.com" target="_blank" class="tool-item">
 							<h3>Microsoft To Do <img src="https://todo.microsoft.com/favicon.ico" alt="Microsoft To Do" class="tool-logo"></h3>
 							<p>Task management and to-do list organization</p>
-							<a href="https://todo.microsoft.com" target="_blank" class="tool-link">Visit</a>
 							<span class="tool-tag tasks">Tasks</span>
-						</div>
-						<div class="tool-item">
+						</a>
+						<a href="https://www.bettercanvas.org/" target="_blank" class="tool-item">
 							<h3>BetterCampus <img src="https://www.bettercanvas.org/favicon.ico" alt="BetterCampus" class="tool-logo"></h3>
 							<p>Formerly BetterCanvas - Chrome extension to enhance Canvas LMS</p>
-							<a href="https://www.bettercanvas.org/" target="_blank" class="tool-link">Visit</a>
 							<span class="tool-tag canvas">Canvas</span>
-						</div>
+						</a>
 					</div>
 				</div>
 
@@ -315,48 +304,41 @@
 					<h2>Extras</h2>
 					<p class="section-description">Additional useful tools for learning, productivity, and academic support</p>
 					<div class="tool-cards">
-						<div class="tool-item">
+						<a href="https://mathway.com" target="_blank" class="tool-item">
 							<h3>Mathway <img src="https://mathway.com/favicon.ico" alt="Mathway" class="tool-logo"></h3>
 							<p>Math problem solver with instant solutions</p>
-							<a href="https://mathway.com" target="_blank" class="tool-link">Visit</a>
 							<span class="tool-tag math">Math</span>
-						</div>
-						<div class="tool-item">
+						</a>
+						<a href="https://character.ai" target="_blank" class="tool-item">
 							<h3>Character.ai <img src="https://character.ai/favicon.ico" alt="Character.ai" class="tool-logo"></h3>
 							<p>AI chatbot for creative conversations and learning</p>
-							<a href="https://character.ai" target="_blank" class="tool-link">Visit</a>
 							<span class="tool-tag ai">AI Chat</span>
-						</div>
-						<div class="tool-item">
+						</a>
+						<a href="https://cnvmp3.com" target="_blank" class="tool-item">
 							<h3>CNVMP3 <img src="https://cnvmp3.com/favicon.ico" alt="CNVMP3" class="tool-logo"></h3>
 							<p>YouTube to MP3 or MP4 converter</p>
-							<a href="https://cnvmp3.com" target="_blank" class="tool-link">Visit</a>
 							<span class="tool-tag converter">Converter</span>
-						</div>
-						<div class="tool-item">
+						</a>
+						<a href="https://onenote.com" target="_blank" class="tool-item">
 							<h3>OneNote <img src="https://onenote.com/favicon.ico" alt="OneNote" class="tool-logo"></h3>
 							<p>Microsoft's online notepad and collaboration tool</p>
-							<a href="https://onenote.com" target="_blank" class="tool-link">Visit</a>
 							<span class="tool-tag notes">Notes</span>
-						</div>
-						<div class="tool-item">
+						</a>
+						<a href="https://coggle.it" target="_blank" class="tool-item">
 							<h3>Coggle <img src="https://coggle.it/favicon.ico" alt="Coggle" class="tool-logo"></h3>
 							<p>Mind mapping tool for visual organization</p>
-							<a href="https://coggle.it" target="_blank" class="tool-link">Visit</a>
 							<span class="tool-tag mindmap">Mind Map</span>
-						</div>
-						<div class="tool-item">
+						</a>
+						<a href="https://conceptboard.com" target="_blank" class="tool-item">
 							<h3>ConceptBoard <img src="https://conceptboard.com/favicon.ico" alt="ConceptBoard" class="tool-logo"></h3>
 							<p>Digital whiteboard and mind mapping platform</p>
-							<a href="https://conceptboard.com" target="_blank" class="tool-link">Visit</a>
 							<span class="tool-tag whiteboard">Whiteboard</span>
-						</div>
-						<div class="tool-item">
+						</a>
+						<a href="https://whiteboard.fi" target="_blank" class="tool-item">
 							<h3>Whiteboard.fi <img src="https://whiteboard.fi/favicon.ico" alt="Whiteboard.fi" class="tool-logo"></h3>
 							<p>Interactive online whiteboard for collaboration</p>
-							<a href="https://whiteboard.fi" target="_blank" class="tool-link">Visit</a>
 							<span class="tool-tag whiteboard">Whiteboard</span>
-						</div>
+						</a>
 					</div>
 				</div>
 			</div>
