--- a/student.html
+++ b/student.html
@@ -11,7 +11,7 @@
 	<canvas id="bg-graph"></canvas>
 	<header>
 		<nav class="navbar minimal-navbar">
-			<div class="logo"><a href="index.html">Quote</a></div>
+			<div class="logo"><a href="index.html">Quoteai.org</a></div>
 			<div class="nav-and-menu">
 				<div class="search-container">
 					<img src="https://img.icons8.com/ios-filled/50/000000/search.png" alt="Search" class="search-icon">
@@ -64,12 +64,12 @@
 					<p class="section-description">Hand-picked premium tools that students love most</p>
 					<div class="tool-cards">
 						<a href="https://app.cluely.com/" target="_blank" class="tool-item featured-item">
-							<h3>Cluely <img src="https://app.cluely.com/favicon.ico" alt="Cluely" class="tool-logo"></h3>
+							<h3>Cluely <img src="https://github.com/Delexoo/quoteai.org/raw/refs/heads/main/cluely.ico" alt="Cluely" class="tool-logo"></h3>
 							<p>AI study assistant for academic support</p>
 							<span class="tool-tag study">Study</span>
 						</a>
 						<a href="https://www.bettercanvas.org/" target="_blank" class="tool-item featured-item">
-							<h3>BetterCampus <img src="https://www.bettercanvas.org/favicon.ico" alt="BetterCampus" class="tool-logo"></h3>
+							<h3>BetterCampus <img src="https://github.com/Delexoo/quoteai.org/raw/refs/heads/main/bettercanvas.ico" alt="BetterCampus" class="tool-logo"></h3>
 							<p>Chrome extension to enhance Canvas LMS experience</p>
 							<span class="tool-tag canvas">Canvas</span>
 						</a>
@@ -86,7 +86,7 @@
 					<p class="section-description">Intelligent AI tools to help with homework, research, and academic writing</p>
 					<div class="tool-cards">
 						<a href="https://app.cluely.com/" target="_blank" class="tool-item">
-							<h3>Cluely <img src="https://app.cluely.com/favicon.ico" alt="Cluely" class="tool-logo"></h3>
+							<h3>Cluely <img src="https://github.com/Delexoo/quoteai.org/raw/refs/heads/main/cluely.ico" alt="Cluely" class="tool-logo"></h3>
 							<p>AI study assistant for academic support</p>
 							<span class="tool-tag study">Study</span>
 						</a>
@@ -293,7 +293,7 @@
 							<span class="tool-tag tasks">Tasks</span>
 						</a>
 						<a href="https://www.bettercanvas.org/" target="_blank" class="tool-item">
-							<h3>BetterCampus <img src="https://www.bettercanvas.org/favicon.ico" alt="BetterCampus" class="tool-logo"></h3>
+							<h3>BetterCampus <img src="https://github.com/Delexoo/quoteai.org/raw/refs/heads/main/bettercanvas.ico" alt="BetterCampus" class="tool-logo"></h3>
 							<p>Formerly BetterCanvas - Chrome extension to enhance Canvas LMS</p>
 							<span class="tool-tag canvas">Canvas</span>
 						</a>
@@ -338,6 +338,11 @@
 							<h3>Whiteboard.fi <img src="https://whiteboard.fi/favicon.ico" alt="Whiteboard.fi" class="tool-logo"></h3>
 							<p>Interactive online whiteboard for collaboration</p>
 							<span class="tool-tag whiteboard">Whiteboard</span>
+						</a>
+						<a href="https://canva.com" target="_blank" class="tool-item">
+							<h3>Canva <img src="https://canva.com/favicon.ico" alt="Canva" class="tool-logo"></h3>
+							<p>Easy-to-use design platform for presentations and graphics</p>
+							<span class="tool-tag workspace">Design</span>
 						</a>
 					</div>
 				</div>
