--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<canvas id="bg-graph"></canvas>
 	<header>
 		<nav class="navbar minimal-navbar">
-			<div class="logo">Quote</div>
+			<div class="logo">Quoteai.org</div>
 			<div class="nav-and-menu">
 				<div class="search-container">
 					<img src="https://img.icons8.com/ios-filled/50/000000/search.png" alt="Search" class="search-icon">
