--- a/landing.html
+++ b/landing.html
@@ -55,7 +55,7 @@
 		<section class="landing-hero">
 			<div class="landing-content">
 				<div class="landing-header">
-					<h1>Choose Your Path</h1>
+					<h1>Choose Your Role</h1>
 					<p>Select the option that best describes you to get personalized tools and resources</p>
 				</div>
 				<div class="path-options">
