--- a/student.html
+++ b/student.html
@@ -65,8 +65,13 @@
 					<div class="tool-cards">
 						<a href="https://app.cluely.com/" target="_blank" class="tool-item featured-item">
 							<h3>Cluely <img src="https://github.com/Delexoo/quoteai.org/raw/refs/heads/main/cluely.ico" alt="Cluely" class="tool-logo"></h3>
-							<p>AI study assistant for academic support</p>
+							<p>Live Interactive AI study assistant for academic support</p>
 							<span class="tool-tag study">Study</span>
+						</a>
+						<a href="https://chat.qwen.ai/" target="_blank" class="tool-item featured-item">
+							<h3>Qwen <img src="https://github.com/Delexoo/quoteai.org/raw/refs/heads/main/qwen.ico" alt="Qwen" class="tool-logo"></h3>
+							<p>Most Advanced AI assistant for comprehensive academic support and research</p>
+							<span class="tool-tag ai">AI</span>
 						</a>
 						<a href="https://www.bettercanvas.org/" target="_blank" class="tool-item featured-item">
 							<h3>BetterCampus <img src="https://github.com/Delexoo/quoteai.org/raw/refs/heads/main/bettercanvas.ico" alt="BetterCampus" class="tool-logo"></h3>
@@ -87,13 +92,18 @@
 					<div class="tool-cards">
 						<a href="https://app.cluely.com/" target="_blank" class="tool-item">
 							<h3>Cluely <img src="https://github.com/Delexoo/quoteai.org/raw/refs/heads/main/cluely.ico" alt="Cluely" class="tool-logo"></h3>
-							<p>AI study assistant for academic support</p>
+							<p>Live Interactive AI study assistant for academic support</p>
 							<span class="tool-tag study">Study</span>
 						</a>
-						<a href="https://chat.openai.com" target="_blank" class="tool-item">
-							<h3>ChatGPT <img src="https://chat.openai.com/favicon.ico" alt="ChatGPT" class="tool-logo"></h3>
-							<p>AI assistant for homework help, explanations, and writing</p>
-							<span class="tool-tag ai">AI Chat</span>
+						<a href="https://savemygpa.com" target="_blank" class="tool-item">
+							<h3>SaveMyGPA <img src="https://savemygpa.com/favicon.ico" alt="SaveMyGPA" class="tool-logo"></h3>
+							<p>AI-powered study tool for GPA improvement</p>
+							<span class="tool-tag gpa">GPA</span>
+						</a>
+						<a href="https://chat.qwen.ai/" target="_blank" class="tool-item">
+							<h3>Qwen <img src="https://github.com/Delexoo/quoteai.org/raw/refs/heads/main/qwen.ico" alt="Qwen" class="tool-logo"></h3>
+							<p>Most Advanced AI assistant for comprehensive academic support and research</p>
+							<span class="tool-tag ai">AI</span>
 						</a>
 						<a href="https://claude.ai" target="_blank" class="tool-item">
 							<h3>Claude <img src="https://claude.ai/favicon.ico" alt="Claude" class="tool-logo"></h3>
@@ -120,32 +130,10 @@
 							<p>Homework help and study community platform</p>
 							<span class="tool-tag community">Community</span>
 						</a>
-						<a href="https://savemygpa.com" target="_blank" class="tool-item">
-							<h3>SaveMyGPA <img src="https://savemygpa.com/favicon.ico" alt="SaveMyGPA" class="tool-logo"></h3>
-							<p>AI-powered study tool for GPA improvement</p>
-							<span class="tool-tag gpa">GPA</span>
-						</a>
-					</div>
-				</div>
-
-				<div class="tool-section">
-					<h2>Research & Citations</h2>
-					<p class="section-description">Academic search engines and citation management tools for scholarly work</p>
-					<div class="tool-cards">
-						<a href="https://citationmachine.net" target="_blank" class="tool-item">
-							<h3>Citation Machine <img src="https://citationmachine.net/favicon.ico" alt="Citation Machine" class="tool-logo"></h3>
-							<p>Automatic citation generator</p>
-							<span class="tool-tag citations">Citations</span>
-						</a>
-						<a href="https://scholar.google.com" target="_blank" class="tool-item">
-							<h3>Google Scholar <img src="https://scholar.google.com/favicon.ico" alt="Google Scholar" class="tool-logo"></h3>
-							<p>Academic search engine for scholarly literature</p>
-							<span class="tool-tag research">Research</span>
-						</a>
-						<a href="https://zotero.org" target="_blank" class="tool-item">
-							<h3>Zotero <img src="https://zotero.org/favicon.ico" alt="Zotero" class="tool-logo"></h3>
-							<p>Reference management and citation tool</p>
-							<span class="tool-tag references">References</span>
+						<a href="https://chat.openai.com" target="_blank" class="tool-item">
+							<h3>ChatGPT <img src="https://chat.openai.com/favicon.ico" alt="ChatGPT" class="tool-logo"></h3>
+							<p>AI assistant for homework help, explanations, and writing</p>
+							<span class="tool-tag ai">AI Chat</span>
 						</a>
 					</div>
 				</div>
@@ -300,6 +288,28 @@
 					</div>
 				</div>
 
+				<div class="tool-section">
+					<h2>Research & Citations</h2>
+					<p class="section-description">Academic search engines and citation management tools for scholarly work</p>
+					<div class="tool-cards">
+						<a href="https://citationmachine.net" target="_blank" class="tool-item">
+							<h3>Citation Machine <img src="https://citationmachine.net/favicon.ico" alt="Citation Machine" class="tool-logo"></h3>
+							<p>Automatic citation generator</p>
+							<span class="tool-tag citations">Citations</span>
+						</a>
+						<a href="https://scholar.google.com" target="_blank" class="tool-item">
+							<h3>Google Scholar <img src="https://scholar.google.com/favicon.ico" alt="Google Scholar" class="tool-logo"></h3>
+							<p>Academic search engine for scholarly literature</p>
+							<span class="tool-tag research">Research</span>
+						</a>
+						<a href="https://zotero.org" target="_blank" class="tool-item">
+							<h3>Zotero <img src="https://zotero.org/favicon.ico" alt="Zotero" class="tool-logo"></h3>
+							<p>Reference management and citation tool</p>
+							<span class="tool-tag references">References</span>
+						</a>
+					</div>
+				</div>
+				
 				<div class="tool-section">
 					<h2>Extras</h2>
 					<p class="section-description">Additional useful tools for learning, productivity, and academic support</p>
