--- a/student.html
+++ b/student.html
@@ -65,7 +65,7 @@
 					<div class="tool-cards">
 						<a href="https://app.cluely.com/" target="_blank" class="tool-item featured-item">
 							<h3>Cluely <img src="https://github.com/Delexoo/quoteai.org/raw/refs/heads/main/cluely.ico" alt="Cluely" class="tool-logo"></h3>
-							<p>Live Interactive AI study assistant for academic support</p>
+							<p>Live interactive AI study assistant for academic support</p>
 							<span class="tool-tag study">Study</span>
 						</a>
 						<a href="https://chat.qwen.ai/" target="_blank" class="tool-item featured-item">
@@ -92,7 +92,7 @@
 					<div class="tool-cards">
 						<a href="https://app.cluely.com/" target="_blank" class="tool-item">
 							<h3>Cluely <img src="https://github.com/Delexoo/quoteai.org/raw/refs/heads/main/cluely.ico" alt="Cluely" class="tool-logo"></h3>
-							<p>Live Interactive AI study assistant for academic support</p>
+							<p>Live interactive AI study assistant for academic support</p>
 							<span class="tool-tag study">Study</span>
 						</a>
 						<a href="https://savemygpa.com" target="_blank" class="tool-item">
@@ -134,6 +134,65 @@
 							<h3>ChatGPT <img src="https://chat.openai.com/favicon.ico" alt="ChatGPT" class="tool-logo"></h3>
 							<p>AI assistant for homework help, explanations, and writing</p>
 							<span class="tool-tag ai">AI Chat</span>
+						</a>
+					</div>
+				</div>
+
+				<div class="tool-section">
+					<h2>Free Courses & Educational Resources</h2>
+					<p class="section-description">High-quality free courses, lectures, and learning materials from top institutions</p>
+					<div class="tool-cards">
+						<a href="https://edx.org" target="_blank" class="tool-item">
+							<h3>edX <img src="https://edx.org/favicon.ico" alt="edX" class="tool-logo"></h3>
+							<p>Free university courses from top institutions worldwide</p>
+							<span class="tool-tag courses">Courses</span>
+						</a>
+						<a href="https://khanacademy.org" target="_blank" class="tool-item">
+							<h3>Khan Academy <img src="https://khanacademy.org/favicon.ico" alt="Khan Academy" class="tool-logo"></h3>
+							<p>Free courses in math, science, and more</p>
+							<span class="tool-tag courses">Courses</span>
+						</a>
+						<a href="https://coursera.org" target="_blank" class="tool-item">
+							<h3>Coursera <img src="https://coursera.org/favicon.ico" alt="Coursera" class="tool-logo"></h3>
+							<p>University courses and certifications</p>
+							<span class="tool-tag certificates">Certificates</span>
+						</a>
+						<a href="https://ocw.mit.edu" target="_blank" class="tool-item">
+							<h3>MIT OCW <img src="https://ocw.mit.edu/favicon.ico" alt="MIT OpenCourseWare" class="tool-logo"></h3>
+							<p>Free MIT course materials</p>
+							<span class="tool-tag mit">MIT</span>
+						</a>
+						<a href="https://udemy.com" target="_blank" class="tool-item">
+							<h3>Udemy <img src="https://github.com/Delexoo/Quote/raw/refs/heads/main/udemy.ico" alt="Udemy" class="tool-logo"></h3>
+							<p>Online courses on various topics and skills</p>
+							<span class="tool-tag skills">Skills</span>
+						</a>
+						<a href="https://freecodecamp.org" target="_blank" class="tool-item">
+							<h3>FreeCodeCamp <img src="https://github.com/Delexoo/Quote/raw/refs/heads/main/freecodecamp.ico" alt="FreeCodeCamp" class="tool-logo"></h3>
+							<p>Free programming and coding tutorials</p>
+							<span class="tool-tag coding">Coding</span>
+						</a>
+						<a href="https://futurelearn.com" target="_blank" class="tool-item">
+							<h3>FutureLearn <img src="https://futurelearn.com/favicon.ico" alt="FutureLearn" class="tool-logo"></h3>
+							<p>Online courses from universities and institutions</p>
+							<span class="tool-tag courses">Courses</span>
+						</a>
+					</div>
+				</div>
+
+				<div class="tool-section">
+					<h2>Free Books</h2>
+					<p class="section-description">Free digital libraries and book repositories for academic research</p>
+					<div class="tool-cards">
+						<a href="https://annas-archive.li" target="_blank" class="tool-item">
+							<h3>Anna's Archive <img src="https://annas-archive.li/favicon.ico" alt="Anna's Archive" class="tool-logo"></h3>
+							<p>Comprehensive free book and academic resource library</p>
+							<span class="tool-tag books">Books</span>
+						</a>
+						<a href="https://libgen.ac" target="_blank" class="tool-item">
+							<h3>Library Genesis <img src="https://libgen.ac/favicon.ico" alt="Library Genesis" class="tool-logo"></h3>
+							<p>Free scientific and academic book repository</p>
+							<span class="tool-tag books">Books</span>
 						</a>
 					</div>
 				</div>
@@ -203,65 +262,6 @@
 				</div>
 
 				<div class="tool-section">
-					<h2>Free Books</h2>
-					<p class="section-description">Free digital libraries and book repositories for academic research</p>
-					<div class="tool-cards">
-						<a href="https://annas-archive.li" target="_blank" class="tool-item">
-							<h3>Anna's Archive <img src="https://annas-archive.li/favicon.ico" alt="Anna's Archive" class="tool-logo"></h3>
-							<p>Comprehensive free book and academic resource library</p>
-							<span class="tool-tag books">Books</span>
-						</a>
-						<a href="https://libgen.ac" target="_blank" class="tool-item">
-							<h3>Library Genesis <img src="https://libgen.ac/favicon.ico" alt="Library Genesis" class="tool-logo"></h3>
-							<p>Free scientific and academic book repository</p>
-							<span class="tool-tag books">Books</span>
-						</a>
-					</div>
-				</div>
-
-				<div class="tool-section">
-					<h2>Free Courses & Educational Resources</h2>
-					<p class="section-description">High-quality free courses, lectures, and learning materials from top institutions</p>
-					<div class="tool-cards">
-						<a href="https://edx.org" target="_blank" class="tool-item">
-							<h3>edX <img src="https://edx.org/favicon.ico" alt="edX" class="tool-logo"></h3>
-							<p>Free university courses from top institutions worldwide</p>
-							<span class="tool-tag courses">Courses</span>
-						</a>
-						<a href="https://khanacademy.org" target="_blank" class="tool-item">
-							<h3>Khan Academy <img src="https://khanacademy.org/favicon.ico" alt="Khan Academy" class="tool-logo"></h3>
-							<p>Free courses in math, science, and more</p>
-							<span class="tool-tag courses">Courses</span>
-						</a>
-						<a href="https://coursera.org" target="_blank" class="tool-item">
-							<h3>Coursera <img src="https://coursera.org/favicon.ico" alt="Coursera" class="tool-logo"></h3>
-							<p>University courses and certifications</p>
-							<span class="tool-tag certificates">Certificates</span>
-						</a>
-						<a href="https://ocw.mit.edu" target="_blank" class="tool-item">
-							<h3>MIT OCW <img src="https://ocw.mit.edu/favicon.ico" alt="MIT OpenCourseWare" class="tool-logo"></h3>
-							<p>Free MIT course materials</p>
-							<span class="tool-tag mit">MIT</span>
-						</a>
-						<a href="https://udemy.com" target="_blank" class="tool-item">
-							<h3>Udemy <img src="https://github.com/Delexoo/Quote/raw/refs/heads/main/udemy.ico" alt="Udemy" class="tool-logo"></h3>
-							<p>Online courses on various topics and skills</p>
-							<span class="tool-tag skills">Skills</span>
-						</a>
-						<a href="https://freecodecamp.org" target="_blank" class="tool-item">
-							<h3>FreeCodeCamp <img src="https://github.com/Delexoo/Quote/raw/refs/heads/main/freecodecamp.ico" alt="FreeCodeCamp" class="tool-logo"></h3>
-							<p>Free programming and coding tutorials</p>
-							<span class="tool-tag coding">Coding</span>
-						</a>
-						<a href="https://futurelearn.com" target="_blank" class="tool-item">
-							<h3>FutureLearn <img src="https://futurelearn.com/favicon.ico" alt="FutureLearn" class="tool-logo"></h3>
-							<p>Online courses from universities and institutions</p>
-							<span class="tool-tag courses">Courses</span>
-						</a>
-					</div>
-				</div>
-
-				<div class="tool-section">
 					<h2>Note Taking & Organization</h2>
 					<p class="section-description">Digital tools for organizing notes, planning studies, and knowledge management</p>
 					<div class="tool-cards">
@@ -309,7 +309,7 @@
 						</a>
 					</div>
 				</div>
-				
+
 				<div class="tool-section">
 					<h2>Extras</h2>
 					<p class="section-description">Additional useful tools for learning, productivity, and academic support</p>
