--- a/index.html
+++ b/index.html
@@ -78,9 +78,9 @@
 				
 				<p><strong>What We Offer:</strong></p>
 				<ul>
-					<li><strong>Student Hub:</strong> AI study assistants, research tools, plagiarism checkers, free books and courses</li>
-					<li><strong>Professional Hub:</strong> Project management, analytics, business communication tools</li>
-					<li><strong>Creator Hub:</strong> Design software, video editors, content creation resources</li>
+					<li><strong>Student Section:</strong> AI study assistants, research tools, plagiarism checkers, free books, courses, and more!</li>
+					<li><strong>Professional Section:</strong> Project management, analytics, business communication tools, and more!</li>
+					<li><strong>Creator Section:</strong> Design software, video editors, content creation resources, and more!</li>
 				</ul>
 				
 				<p><strong>Our Mission:</strong> We believe "The Internet is your free online university." Quote makes quality education and powerful digital tools accessible to everyone, regardless of budget. Our platform helps you learn smarter, work more efficiently, and create better content.</p>
@@ -111,11 +111,10 @@
 
 		<section id="contact" class="content-section">
 			<div class="section-content">
-				<h2>Get In Touch</h2>
+				<h2>Stay In Touch</h2>
 				<p>Have questions or want to contribute to our open-source platform? We'd love to hear from you.</p>
 				<div class="contact-info">
-					<p>Discord: @delexostudios</p>
-					<p>My Store: <a href="https://beacons.ai/delexo" target="_blank">@Delexo</a></p>
+					<p>Coming Soon!</p>
 				</div>
 			</div>
 		</section>
